--- a/package.json
+++ b/package.json
@@ -8,13 +8,23 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
+    "@prisma/client": "^4.2.1",
+    "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
     "next": "12.2.5",
+    "postcss": "^8.4.16",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5"
+    "eslint-config-next": "12.2.5",
+    "prisma": "^4.2.1"
   }
 }
