--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.15.1",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "ts-node": "^10.9.1"
   },
